--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,2 @@
-<img src="./assets/poli-multa.png">
+<img src="./assets/images/poli-multa.png" height="100">
 <h1>Servicio de Consulta de Multas</h1>
